src/test/ui/pattern/usefulness/issue-31561.rs
enum Thing {
    Foo(u8),
    Bar,
    Baz
}

fn main() {
    let Thing::Foo(y) = Thing::Foo(1);
    //~^ ERROR refutable pattern in local binding: `Thing::Bar` and `Thing::Baz` not covered
}
